[project]
name = "mcp-implementation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.13.3",
    "chromadb>=0.6.3",
    "httpx",
    "langchain>=0.3.21",
    "langchain-community>=0.3.20",
    "langchain-core>=0.3.45",
    "mcp[cli]>=1.3.0",
]
